
* Fixed enabling of HDF4/HDF5 in CMake build on Windows.

* Allow xml attributes with a namespace in xml products to be defined
  in a codadef by a definition of an attribute without a namespace
  (as was already possible for xml elements).

2.17 2016-06-27
~~~~~~~~~~~~~~~

* CMake build system can now be used on Windows.
  It currently only supports building of the C library,
  command line tools and Python interface.

* Updated embedded PCRE library to version 8.38.

* Updated embedded expat library to version 2.1.1.

* Updated embedded zlib library to version 1.2.8.

2.16 2016-03-24
~~~~~~~~~~~~~~~

* Automatic detection of product class/type/version is now performed
  using CODA expressions and is now possible for all data formats.
  All existing detection rules in codadefs are automatically translated
  to the new CODA expression variants when the codadefs are read.
  codadefs that tried to map hdf4, hdf5, cdf, netcdf, grib1, grib2, rinex,
  or sp3 files to ascii/binary to allow automatic product type/version
  detection will have to be updated to now perform the detection using
  the actual format of the product.

* Product definitions in codadefs may now omit a root type definition if
  the product is not an 'ascii' or 'binary' product. The root type will
  then be determined purely dynamically based on the content of the file.
  This allows for codadef entries that are purely meant to detect the
  product type/version for a product using a self-describing data format.

* Added coda_expression_is_equal(), coda_expression_print(), and 
  coda_cursor_print_path() functions.

* Added 'at', 'dim', and 'numdims' coda expression functions.

* Introduced several additions to the codadef format in order to ease
  the transition to a future revision of the codadef format:
  - added MatchExpression
  - allow Attribute to be used for Array, Union, Integer, Float, Text,
    Complex, Raw, and Time